--- a/bs/bs/ViewModels/CadastrarDepartamento.xaml
+++ b/bs/bs/ViewModels/CadastrarDepartamento.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-ViewModels:bs"
+             Title="Cadastrar Departamento"
              x:Class="bs.ViewModels.CadastrarDepartamento">
     <ContentPage.Content>
         <StackLayout>
