--- a/bs/bs/ViewModels/CadastrarSugestao.xaml
+++ b/bs/bs/ViewModels/CadastrarSugestao.xaml
@@ -1,18 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="bs.ViewModels.Cadastrarsugestao">
+             Title="Cadastrar Sugestão"
+             x:Class="bs.ViewModels.CadastrarSugestao">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Cadastrar Situação:"
+            <Label Text="Cadastrar Sugestão:"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
             <Entry x:Name="txtNome" Text="Nome do Colaborador"></Entry>
-            <Picker x:Name="departamentoPicker" Title="Selecione um item" 
-                ItemsSource="{Binding Departamentos}"
-                ItemDisplayBinding="{Binding Nome}"
-                SelectedItem="{Binding departamentoSelected}" ></Picker>
-            <Entry x:Name="txtsugestao" Text="Situação"></Entry>
+            <Picker Title="Departamento:" 
+                    x:Name="departamentoPicker"
+                    ItemDisplayBinding="{Binding Nome}">
+            </Picker>
+            
+            <Entry x:Name="txtSugestao" Text="Sugestão"></Entry>
             <Entry x:Name="txtJustificativa" Text="Justificativa"></Entry>
             <Button Clicked="Button_Clicked" Text="Salvar"/>
         </StackLayout>
