--- a/bs/bs/Views/CadastrarDepartamento.xaml
+++ b/bs/bs/Views/CadastrarDepartamento.xaml
@@ -2,15 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-ViewModels:bs"
-             Title="Cadastrar Departamento"
+             Title="{Binding Title}"
              x:Class="bs.ViewModels.CadastrarDepartamento">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Cadastrar Departamento"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-            <Entry x:Name="txtNome" Text="Nome: "></Entry>
-            <Button Text="Salvar" Clicked="Button_Clicked"/>
+            <Entry Text="{Binding Nome}" Placeholder="Informe o nome: "></Entry>
+            <Button Text="Salvar" Command="{Binding DefinindoNome}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
