--- a/bs/bs/Page1.xaml
+++ b/bs/bs/Page1.xaml
@@ -2,7 +2,6 @@
 <FlyoutPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:local="clr-namespace:bs"
-            xmlns:local1="clr-namespace:bs.ViewModels"
             x:Class="bs.Page1"
             Title="Menu">
     <FlyoutPage.Flyout>
@@ -12,7 +11,7 @@
     <FlyoutPage.Detail>
         <NavigationPage>
             <x:Arguments>
-                <local1:CadastrarDepartamento/>
+                <local:Home/>
             </x:Arguments>
         </NavigationPage>
     </FlyoutPage.Detail>
