--- a/bs/bs/Views/ListarSugestoes.xaml
+++ b/bs/bs/Views/ListarSugestoes.xaml
@@ -7,26 +7,55 @@
         <StackLayout>
             <SearchBar Placeholder="Filtrar"
                        TextChanged="SearchBar_TextChanged"/>
+            <Grid Margin="0,5,0,0" BackgroundColor="LightBlue">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="60"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label Text="Departamento:" Grid.Column="0" TextColor="Black"
+                       HorizontalOptions="StartAndExpand" Margin="5,0,0,0"
+                                    VerticalOptions="CenterAndExpand"/>
+                <Label Text="Nome:" Grid.Column="1" TextColor="Black"
+                       HorizontalOptions="StartAndExpand"
+                                    VerticalOptions="CenterAndExpand"/>
+                <Label Text="Sugestão:" Grid.Column="2" TextColor="Black"
+                       HorizontalOptions="StartAndExpand"
+                                    VerticalOptions="CenterAndExpand"/>
+                <Label Text="Justificativa:" Grid.Column="3" TextColor="Black"
+                       HorizontalOptions="StartAndExpand"
+                                    VerticalOptions="CenterAndExpand"/>
+            </Grid>
             <CollectionView x:Name="sugestaoList"
                         SelectionMode="Single"
                         Margin="20,5,20,0">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid RowSpacing="0">
+                        <Grid RowSpacing="2" ColumnSpacing="0">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="20"></ColumnDefinition>
+                                <ColumnDefinition Width="40"></ColumnDefinition>
+                                <ColumnDefinition Width="*"></ColumnDefinition>
+                                <ColumnDefinition Width="*"></ColumnDefinition>
+                                <ColumnDefinition Width="*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Text="{Binding DepartamentoId}" Grid.Row="0"
-                                    HorizontalOptions="CenterAndExpand"
+                                    HorizontalOptions="StartAndExpand"
                                     VerticalOptions="CenterAndExpand"></Label>
-                            <Label Text="{Binding Descricao}" Grid.Row="0" Grid.Column="1"
-                                    HorizontalOptions="CenterAndExpand"
+                            <Label Text="{Binding NomeColaborador}" Grid.Row="0" Grid.Column="1"
+                                    HorizontalOptions="StartAndExpand"
                                     VerticalOptions="CenterAndExpand"></Label>
-                            <Label Text="{Binding Justificativa}" Grid.Row="0" Grid.Column="2"
-                                    HorizontalOptions="CenterAndExpand"
+                            <Label Text="{Binding Descricao}" Grid.Row="0" Grid.Column="2"
+                                    HorizontalOptions="StartAndExpand"
+                                    VerticalOptions="CenterAndExpand"></Label>
+                            <Label Text="{Binding Justificativa}" Grid.Row="0" Grid.Column="3"
+                                    HorizontalOptions="StartAndExpand"
                                     VerticalOptions="CenterAndExpand"></Label>
                         </Grid>
                     </DataTemplate>
